avoid left right shift during load always

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html, body {
 }
 
 body {
+  overflow-y: scroll;
   margin: 50px 40px;
 }
 
@@ -64,10 +65,6 @@ h1 {
 }
 
 /* Home page. */
-
-body.home {
-  overflow-y: scroll;
-}
 
 .columns {
   -webkit-column-count: 1;
